--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,13 +1,11 @@
 <div id="<%= dom_id category %>">
-  <p>
-    <strong>Name:</strong>
-    <%= category.name %>
-  </p>
 
-  <p>
-    <strong>Description:</strong>
-    <%= category.description %>
-  </p>
+  <tr>      
+    <th scope="row"><%= category.id %></th>
+    <td><%= category.name %></td>
+    <td><%= category.description %></td>
+    <td><%= link_to "Show this category", category %></td>
+  </tr>
 
 </div>
 
