--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -11,17 +11,19 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+  <div class="mb-3" style="margin-top:20px;">
+    <%= form.label :name_your_category, style: "display: block",  class: "form-label"%>
+    <%= form.text_field :name, style: "width: 50%", class: "form-control", placeholder: "Sport" %>
   </div>
 
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_field :description %>
+  <div class="mb-3">
+    <%= form.label :description, style: "display: block",  class: "form-label" %>
+    <%= form.text_field :description,  style: "width: 50%", class: "form-control", placeholder: "Gloves for football"%>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="mb-3">
+    <%= form.submit class: "btn btn-outline-secondary" %>
   </div>
 <% end %>
+
+
