--- a/app/views/operations/_form.html.erb
+++ b/app/views/operations/_form.html.erb
@@ -11,27 +11,30 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :amount, style: "display: block" %>
-    <%= form.text_field :amount %>
+  <div class="mb-3" style="margin-top:20px;">
+    <%= form.label :amount, style: "display: block", class: "form-label" %>
+    <%= form.text_field :amount,  style: "width: 50%", class: "form-control", placeholder: "255" %>
   </div>
 
-  <div>
+  <div class="mb-3">
     <%= form.label :operation_date, style: "display: block" %>
     <%= form.datetime_field :operation_date %>
   </div>
 
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_field :description %>
+  <div class="mb-3">
+    <%= form.label :description, style: "display: block", class: "form-label"  %>
+    <%= form.text_field :description,  style: "width: 50%", class: "form-control", placeholder: "Gloves for football"  %>
   </div>
 
-  <div>
-    <%= form.label :category_id, style: "display: block" %>
-    <%= form.text_field :category_id %>
+<!--block select category from drop-down meny-->
+  <div class="mb-3">
+    <%= form.label :category_id, style: "display: block", class: "form-label" %>
+    <%= select(:operation, :category_id, options_for_select(@categories)) %>
   </div>
+<!--end block select category from drop-down meny-->
 
-  <div>
-    <%= form.submit %>
+<br>
+  <div class="mb-3">
+   <%= form.submit  class: "btn btn-outline-secondary" %>
   </div>
 <% end %>
