--- a/app/views/operations/show.html.erb
+++ b/app/views/operations/show.html.erb
@@ -1,10 +1,34 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @operation %>
+<div> 
+  <p>    
+    <strong>Operation id: </strong><%= @operation.id %>
+  </p>
+
+  <p>    
+    <strong>Amount: </strong> <%= @operation.amount %>
+  </p>
+
+  <p>    
+    <strong>Description: </strong><%= @operation.description %>
+  </p>
+
+  <p>    
+    <strong>Operation date: </strong><%= @operation.operation_date %>
+  </p>
+</div>
 
 <div>
-  <%= link_to "Edit this operation", edit_operation_path(@operation) %> |
-  <%= link_to "Back to operations", operations_path %>
+ <%= button_to "Destroy this operation", @operation, method: :delete %>
+ <br>
 
-  <%= button_to "Destroy this operation", @operation, method: :delete %>
+  <button class="btn btn-outline-secondary">
+    <%= link_to "Edit this operation", edit_operation_path(@operation) %>
+  </button> 
+
+  <button class="btn btn-outline-secondary">
+    <%= link_to "Back to operations", operations_path %>
+  </button>
+
+
 </div>
