--- a/app/views/reports/report_by_category.html.erb
+++ b/app/views/reports/report_by_category.html.erb
@@ -1,16 +1,42 @@
-<h1>Reports#report_by_category</h1>
-<p>Find me in app/views/reports/report_by_category.html.erb</p>
+<h1>Report by category <%= %></h1>
 
 
-
-
-
+<!--script for using JS-->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <ol>
 <%sum=0%>
-<% @operations.each do |operation|%>
+<% @operations.each do |operation| %>
     <%sum+=operation.amount%>
-    <li><%= operation.category.name%>, <%= operation.amount%>, <%= operation.description%></li>
+    <li><%= operation.category.name%>, <%= operation.amount%>, (<%= operation.description%>)</li>
      <%end%>
-    <p>Total <%=sum%></p>
+     <!--Total amount in selected category-->
+    <p><strong>Total </strong><%=sum%></p>
 </ol>
+
+<!--script ChartJS-->
+<div>
+    <canvas id="myChart" width="600" height="400"></canvas>
+    <script>
+        const ctx = document.getElementById('myChart').getContext('2d');
+        const data = {
+        labels: <%= raw @operation_date %>, 
+        datasets: [{
+            label: 'amount of  money',
+            data: <%= @operation_amount %>,
+            fill: false,
+            borderColor: 'rgb(75, 192, 192)',
+            tension: 0.1
+        }]
+        };
+        const config = {
+        type: 'line',
+        data: data,
+        options: {
+            responsive: false
+            },
+        };
+
+        const myChart = new Chart(ctx, config);
+    </script>
+</div>
